Fixed overlapping divs

--- a/style/main.css
+++ b/style/main.css
@@ -6,6 +6,7 @@ src: url('fonts/Rye-Regular.ttf') format('truetype');
 .styled_button {
   display: inline-block;
   text-decoration: none;
+  text-align: center;
 
   border: 0px solid transparent;
   background-color:  beige;
@@ -13,15 +14,15 @@ src: url('fonts/Rye-Regular.ttf') format('truetype');
 
   padding: 5px 10px;
   border-radius: 10px;
-  box-shadow: 0 0 10px rgba(84, 8, 50, 0.9) inset;
+  box-shadow: 0 0 10px rgba(15, 2, 9, 0.9);
 }
 
 .vignette {
-  position:relative;
+  position:fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   pointer-events: none;
   box-shadow: 0 0 200px rgba(0, 0, 0, 0.9) inset;
 }
@@ -66,7 +67,7 @@ main {
   margin: 0 auto;
 
   width: 90%;
-  height: 60vh;
+  min-height: 60vh;
 }
 
 #start_button {
